# Passy

./: .gitignore  .gitmodules  .last_build_id  .metadata  .mpv.env  DOWNLOADS.md  IDEAS.md  LOCALIZATION.md  PRIVACY-POLICY.md  README.md  SNAP-STORE.md  appimage_builder  build_all.sh  build_all_with_updates_popup.sh  build_all_without_updates_popup.sh  build_android.sh  build_cli.sh  build_windows.bat  build_windows_with_updates_popup.bat  build_windows_without_updates_popup.bat  build_with_mpv.sh  download_releases.sh  flutter_bootstrap.js  flutter_service_worker.js  index.html  l10n.yaml  main.dart.js  manifest.json  passy.iss  prepare_releases.sh  pubspec.yaml  run  run_cli.sh  spinner.css  update_version.sh  version.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  localization.yml  suggestion.yml
.github/workflows/: arm64.sh  armv7.sh  build-all-ci.yml  build-linux-arm64-ci.yml  build-linux-armv7-ci.yml  build-windows-ci.yml  website.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/passy/: MainActivity.kt
android/app/src/main/kotlin/com/glitterware/passy/: AutofillActivity.kt  MainActivity.kt
android/app/src/main/res/drawable/: logo.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/main/resources/: tinylog.properties
android/app/src/profile/: AndroidManifest.xml
appimage/: appimage_builder  com.glitterware.passy.appdata.xml
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: json_hello.dart  json_hello.g.dart  main.dart  passy.dart
lib/common/: assets.dart  common.dart  state.dart  synchronization_wrapper.dart  theme.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_it.arb  app_ru.arb  app_tr.arb  app_zh.arb  app_zh_Hant.arb
lib/passy/: account_data.dart  account_info.dart  app_data.dart  common.dart  custom_field.dart  custom_field.g.dart  dated_entries.dart  dated_entry.dart  entry_event.dart  history.dart  id_card.dart  id_card.g.dart  id_cards.dart  identities.dart  identity.dart  identity.g.dart  images.dart  loaded_account.dart  note.dart  note.g.dart  notes.dart  password.dart  password.g.dart  passwords.dart  passy.dart  passy_data.dart  payment_card.dart  payment_card.g.dart  payment_cards.dart
lib/passy_cli/: passy_cli_native_messaging.json  passy_cli_native_messaging_edge.json
lib/passy_cli/lib/: common.dart  dart_app_data.dart  qr.dart
lib/passy_data/: README.md  account_credentials.dart  account_info.dart  account_info_file.dart  account_settings.dart  app_data.dart  app_data_flutter.dart  argon2_info.dart  auto_backup_settings.dart  autostart.dart  bio_starge.dart  bio_storage.dart  biometric_storage_data.dart  common.dart  compression_type.dart  convert_aegis.dart  csv_convertable.dart  custom_field.dart  dargon2.dart  dated_entries.dart  dated_entry.dart  encrypted_csv_file.dart  encrypted_json_file.dart  entry_event.dart  entry_meta.dart  entry_type.dart  error_entry.dart  favorites.dart  file_index.dart  file_meta.dart  file_sync_history.dart  file_utils.dart  hashing_info.dart  hashing_type.dart  history.dart  history_file.dart  host_address.dart  id_card.dart  id_cards_file.dart  identities_file.dart  (+47 more)
lib/passy_data/glare/: common.dart  glare_client.dart  glare_message.dart  glare_module.dart  glare_server.dart  glare_server_socket.dart  line_stream_subscription.dart  (+3 more)
lib/passy_flutter/: formatted_text_parser.dart  passy_flutter.dart  passy_gen.dart  passy_sort.dart  passy_theme.dart  search_entry_data.dart  theme.dart
lib/screens/: add_account.dart  add_account_screen.dart  add_file_screen.dart  add_id_card_screen.dart  add_identity_screen.dart  add_note_screen.dart  add_password_screen.dart  add_payment_card_screen.dart  assets.dart  autofill_splash_screen.dart  automatic_backup_screen.dart  backup_and_restore_screen.dart  backup_screen.dart  biometric_auth_screen.dart  change_password_screen.dart  change_username_screen.dart  cloud_manage_screen.dart  cloud_privacy_policy_screen.dart  cloud_register_screen.dart  cloud_reset_password_screen.dart  cloud_sync_screen.dart  cloud_update_email_screen.dart  cloud_user_agreement_screen.dart  common.dart  confirm_import_screen.dart  confirm_kdbx_export_screen.dart  confirm_restore_screen.dart  confirm_string_screen.dart  connect_screen.dart  credentials_screen.dart  csv_import_entries_screen.dart  csv_import_screen.dart  downloads_screen.dart  edit_custom_field_screen.dart  edit_id_card_screen.dart  edit_identity_screen.dart  edit_note_screen.dart  edit_password_screen.dart  edit_payment_card_screen.dart  empty.dart  (+40 more)
lib/widgets/: about_passy_dialog.dart  android_dialog.dart  arrow_button.dart  buttoned_text_form_field.dart  common.dart  custom_field_editor.dart  double_action_button.dart  downloads_dialog.dart  elevated_iconed_button.dart  entries_screen_appbar.dart  entry_button.dart  entry_screen_appbar.dart  entry_widget.dart  enum_dropdown_button_form_field.dart  extension_dialog.dart  id_card_widget.dart  identity_widget.dart  linux_dialog.dart  passy_back_button.dart  passy_padding.dart  passy_text_form_field.dart  record_widget.dart  text_form_field_buttoned.dart  three_widget_button.dart  widgets.dart
linux/: CMakeLists.txt  install_appindicator.sh  main.cc  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/mpv/: CMakeLists.txt  stopbuild.sh
linux_assets/: com.glitterware.passy.appdata.xml  passy_launcher.sh
linux_meta/: com.glitterware.passy.appdata.xml
snap/: snapcraft.yaml
snap/gui/: passy.desktop
test/: widget_test.dart
web/: index.html  manifest.json  spinner.css
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+75 files in other folders)
